# deep_research_agent

./: .gitignore  README.md  example.py  main.py  perfect_workflow_research.py  pyproject.toml
ai_agents/: __init__.py  guardrail_agent.py  orchestrator_agents.py  requirements_agent.py  research_agents.py
config/: __init__.py  settings.py
models/: __init__.py  user_models.py
services/: __init__.py  research_service.py  system_monitor.py
tools/: __init__.py  search_tools.py  utility_tools.py
utils/: __init__.py  model_factory.py
